--- a/index.html
+++ b/index.html
@@ -117,56 +117,232 @@
               <img class="team-img" src="./images/section-our-team-1.jpg" width="270" alt="" />
               <p class="team-first-text">Игорь Демьяненко</p>
               <p class="team-text">Product Designer</p>
+              <ul class="list team-social-list">
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img class="team-img" src="./images/section-our-team-2.jpg" width="270" alt="" />
               <p class="team-first-text">Ольга Репина</p>
               <p class="team-text">Frontend Developer</p>
+              <ul class="list team-social-list">
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img class="team-img" src="./images/section-our-team-3.jpg" width="270" alt="" />
               <p class="team-first-text">Николай Тарасов</p>
               <p class="team-text">Marketing</p>
+              <ul class="list team-social-list">
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img class="team-img" src="./images/section-our-team-4.jpg" width="270" alt="" />
               <p class="team-first-text">Михаил Ермаков</p>
               <p class="team-text">UI Designer</p>
+              <ul class="list team-social-list">
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a class="link team-social-link" href=""
+                    ><svg class="team-social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
+      <section class="clients">
+        <h2 class="cliens-title">Постійні клієнти</h2>
+        <ul class="list cliens-list">
+          <li class="cliens-item">
+            <a class="link cliens-link" href=""
+              ><svg class="cliens-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-1"></use></svg
+            ></a>
+          </li>
+          <li class="cliens-item">
+            <a class="link cliens-link" href=""
+              ><svg class="cliens-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-2"></use></svg
+            ></a>
+          </li>
+          <li class="cliens-item">
+            <a class="link cliens-link" href=""
+              ><svg class="cliens-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-3"></use></svg
+            ></a>
+          </li>
+          <li class="cliens-item">
+            <a class="link cliens-link" href=""
+              ><svg class="cliens-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-4"></use></svg
+            ></a>
+          </li>
+          <li class="cliens-item">
+            <a class="link cliens-link" href=""
+              ><svg class="cliens-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-5"></use></svg
+            ></a>
+          </li>
+          <li class="cliens-item">
+            <a class="link cliens-link" href=""
+              ><svg class="cliens-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-6"></use></svg
+            ></a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
-        <address>
-          <ul class="list">
-            <li class="footer-item">
-              <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container footer-wrap">
+        <div class="address-wrap">
+          <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
+          <address>
+            <ul class="list">
+              <li class="footer-item">
+                <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a
+                  class="link address-mail"
+                  href="mailto:info@example.com"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a
+                  class="link address-tel"
+                  href="tel:+380991111111"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <h2 class="social-title">приєднуйтесь</h2>
+          <ul class="list footer-social-list">
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="footer-item">
-              <a
-                class="link address-mail"
-                href="mailto:info@example.com"
-                target="_blank"
-                rel="noreferrer noopener"
-                >info@example.com</a
-              >
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="footer-item">
-              <a
-                class="link address-tel"
-                href="tel:+380991111111"
-                target="_blank"
-                rel="noreferrer noopener"
-                >+38 099 111 11 11</a
-              >
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
