--- a/portfolio.html
+++ b/portfolio.html
@@ -120,35 +120,66 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
-        <address>
-          <ul class="list">
-            <li class="footer-item">
-              <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container footer-wrap">
+        <div class="address-wrap">
+          <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
+          <address>
+            <ul class="list">
+              <li class="footer-item">
+                <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a
+                  class="link address-mail"
+                  href="mailto:info@example.com"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a
+                  class="link address-tel"
+                  href="tel:+380991111111"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <h2 class="social-title">приєднуйтесь</h2>
+          <ul class="list footer-social-list">
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="footer-item">
-              <a
-                class="link address-mail"
-                href="mailto:info@example.com"
-                target="_blank"
-                rel="noreferrer noopener"
-                >info@example.com</a
-              >
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="footer-item">
-              <a
-                class="link address-tel"
-                href="tel:+380991111111"
-                target="_blank"
-                rel="noreferrer noopener"
-                >+38 099 111 11 11</a
-              >
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a class="link footer-social-link" href=""
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
