--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </nav>
         <ul class="list header-contact">
-          <li>
+          <li class="contacts-item">
             <a
               href="mailto:info@devstudio.com"
               class="link header-mail"
@@ -43,7 +43,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contacts-item">
             <a
               href="tel:+380961111111"
               class="link header-tel"
@@ -66,25 +66,25 @@
         <div class="container">
           <h2 hidden>Peculiarities</h2>
           <ul class="list peculiarities-list">
-            <li class="peculiarities-item">
+            <li class="peculiarities-item icon-antenna">
               <p class="peculiarities-title">Внимание к деталям</p>
               <p class="peculiarities-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="peculiarities-item">
+            <li class="peculiarities-item icon-clock">
               <p class="peculiarities-title">Пунктуальность</p>
               <p class="peculiarities-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="peculiarities-item">
+            <li class="peculiarities-item icon-diagram">
               <p class="peculiarities-title">Планирование</p>
               <p class="peculiarities-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="peculiarities-item">
+            <li class="peculiarities-item icon-astronaut">
               <p class="peculiarities-title">Современные технологии</p>
               <p class="peculiarities-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
