--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </nav>
         <ul class="list header-contact">
-          <li class="contacts-item">
+          <li class="contacts-item icon-envelope">
             <a
               href="mailto:info@devstudio.com"
               class="link header-mail"
@@ -43,7 +43,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li class="contacts-item">
+          <li class="contacts-item icon-smartphone">
             <a
               href="tel:+380961111111"
               class="link header-tel"
