--- a/index.html
+++ b/index.html
@@ -34,21 +34,25 @@
           </ul>
         </nav>
         <ul class="list header-contact">
-          <li class="contacts-item icon-envelope">
+          <li class="contacts-item">
             <a
               href="mailto:info@devstudio.com"
               class="link header-mail"
               target="_blank"
               rel="noreferrer noopener"
+              ><svg class="mail-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="contacts-item icon-smartphone">
+          <li class="contacts-item">
             <a
               href="tel:+380961111111"
               class="link header-tel"
               target="_blank"
               rel="noreferrer noopener"
+              ><svg class="mail-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
