--- a/portfolio.html
+++ b/portfolio.html
@@ -27,26 +27,32 @@
         <nav class="header-nav">
           <ul class="list header-list">
             <li class="header-item"><a href="./index.html" class="link header-link">Студия</a></li>
-            <li class="header-item"><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
+            <li class="header-item">
+              <a href="./portfolio.html" class="link header-link">Портфолио</a>
+            </li>
             <li class="header-item"><a href="" class="link header-link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="list header-contact">
-          <li>
+          <li class="contacts-item">
             <a
               href="mailto:info@devstudio.com"
               class="link header-mail"
               target="_blank"
               rel="noreferrer noopener"
+              ><svg class="mail-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contacts-item">
             <a
               href="tel:+380961111111"
               class="link header-tel"
               target="_blank"
               rel="noreferrer noopener"
+              ><svg class="mail-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
